fix(errors): i#3406 fix toast styles broken on taigaui update

--- a/javascript/apps/taiga/src/app/styles/shared/button.css
+++ b/javascript/apps/taiga/src/app/styles/shared/button.css
@@ -549,3 +549,7 @@ Copyright (c) 2023-present Kaleidos INC
     color: var(--color-secondary);
   }
 }
+
+[tuiwrapper][data-appearance="icon"] {
+  opacity: 1;
+}
